// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginInfo should not show the view permissions button with text less than 50 chars 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
  >
    <div
      data-testid="PluginInfo__permissions"
    >
      <h4
        class="font-bold"
      >
        Permissions
      </h4>
      <div
        class="inline-flex items-baseline space-x-2"
      >
        <p
          class="mt-3 text-theme-secondary-600"
        >
          <span
            class="TruncateEnd__Wrapper-sc-1hhdnni-0"
            data-testid="TruncateEnd"
          >
            Allows access to the Payvo Wallet events
          </span>
        </p>
      </div>
    </div>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should open and close the plugin permissions modal 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
  >
    <div
      data-testid="PluginInfo__permissions"
    >
      <h4
        class="font-bold"
      >
        Permissions
      </h4>
      <div
        class="inline-flex items-baseline space-x-2"
      >
        <p
          class="mt-3 text-theme-secondary-600"
        >
          <span
            class="TruncateEnd__Wrapper-sc-1hhdnni-0"
            data-testid="TruncateEnd"
          >
            Allows access to the Payvo Wallet events, Allows a…
          </span>
        </p>
        <button
          class="font-semibold link"
        >
          View All
        </button>
      </div>
    </div>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should render properly 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
  >
    <div
      data-testid="PluginInfo__description"
    >
      <h4
        class="font-bold"
      >
        About
      </h4>
      <p
        class="mt-3 text-theme-secondary-600"
      >
        Testing About text content
      </p>
    </div>
    <div
      data-testid="PluginInfo__permissions"
    >
      <h4
        class="font-bold"
      >
        Permissions
      </h4>
      <div
        class="inline-flex items-baseline space-x-2"
      >
        <p
          class="mt-3 text-theme-secondary-600"
        >
          <span
            class="TruncateEnd__Wrapper-sc-1hhdnni-0"
            data-testid="TruncateEnd"
          >
            Allows access to the currently active profile, All…
          </span>
        </p>
        <button
          class="font-semibold link"
        >
          View All
        </button>
      </div>
    </div>
    <div
      data-testid="PluginInfo__images"
    >
      <p
        class="font-bold"
      >
        Screenshots
      </p>
      <div
        class="flex absolute top-0 right-0 pr-4 space-x-3 screenshots-pagination swiper-pagination-clickable swiper-pagination-bullets"
        data-testid="PluginInfo__images--pagination"
      />
      <div
        class="mt-4"
      >
        <div
          class="relative"
        >
          <div
            class="overflow-hidden -mb-8 list-none px-4.5 -mx-4.5 slide-container swiper-container-initialized swiper-container-horizontal"
            style="height: 232px;"
          >
            <div
              class="h-full swiper-wrapper important:z-0 "
              style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
            >
              <div
                class="swiper-slide"
                style="height: 200px; margin-top: 0px;"
              >
                <img
                  alt="Screenshot"
                  class="object-contain overflow-hidden w-full max-h-44 rounded-lg bg-theme-secondary-200"
                  data-testid="PluginInfo__images--screenshot"
                  src="https://payvo.com/screenshot.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should render with minimum version 1`] = `
<div>
  <div
    class="space-y-8"
  >
    <div
      data-testid="PluginInfo__requirements"
    >
      <h4
        class="font-bold"
      >
        Requirements
      </h4>
      <p
        class="mt-3 text-theme-secondary-600"
      >
        <span>
          Payvo Wallet Version v3.0.1+
        </span>
      </p>
    </div>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginInfo should render without permissions 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
  >
    <div
      data-testid="PluginInfo__description"
    >
      <h4
        class="font-bold"
      >
        About
      </h4>
      <p
        class="mt-3 text-theme-secondary-600"
      >
        Testing About text content
      </p>
    </div>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this Plugin in the Payvo Wallet does not mean that either ARK.io or ARK SCIC is directly involved in its development or developers. By installing it, you assume any associated risks.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
